--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h2 class="text-center margin-bottom h3">Current Staff</h2>
+<h2 class="text-center margin-bottom h3 mt-4">Current Staff</h2>
 <div class="card-container justify-center">
     {% for person in staff %}
     <div style="flex-basis: auto;" class="card clean img">
@@ -26,7 +26,7 @@
     {% endfor %}
 </div>
 
-<h2 class="text-center margin-top margin-bottom h3">Current Board</h2>
+<h2 class="text-center mt-4 mb-4 h3">Current Board</h2>
 <div class="card-container justify-center margin-bottom">
     {% for person in board %}
     <div style="flex-basis: auto; width: 400px" class="card clean img">
