--- a/application/templates/contact.html
+++ b/application/templates/contact.html
@@ -2,9 +2,9 @@
 {% set active_page = "contact" %}
 
 {% block content %}
-<div id="contact-form" class="flex-row wrapper">
+<div id="contact-form" class="flex-row wrapper mt-3">
     <div class="flex-3">
-        <h1 class="text-center h2 margin-bottom">Contact Us</h1>
+        <h1 class="text-center h2 mb-3">Contact Us</h1>
         <p class="">
             Email us at <a class="fancy-link" href="mailto:info@queertk.org">info@queertk.org</a> or fill out the form on this page. Only the subject and message fields are required — if you choose not to provide a name and/or email, your message will be completely anonymous.
         </p>
