--- a/application/static/sass/components/_helpers.sass
+++ b/application/static/sass/components/_helpers.sass
@@ -147,6 +147,14 @@
 
 $margin-increment: 0.75rem
 .m
+  &t-0
+    margin-top: $margin-increment * 0
+  &b-0
+    margin-bottom: $margin-increment * 0
+  &l-0
+    margin-left: $margin-increment * 0
+  &r-0
+    margin-right: $margin-increment * 0
   &t-1
     margin-top: $margin-increment * 1
   &b-1
