--- a/application/templates/events.html
+++ b/application/templates/events.html
@@ -35,7 +35,7 @@
                 <li>By
                     {% for credit in title_credits if ( ( (credit.role=="Playwright") or (credit.role=="Playwright, Lyricist") ) and (credit.production_id==prod.production_id) ) %}
 
-                    {% if credit.artist_id %}
+                    {% if credit.biography %}
                     <a class="fancy-link" href="{{ url_for("bp_person.display_artist", artist_id=credit.artist_id, slug=credit.slug) }}">{{ credit.name }}</a>
                     {% else %}
                     {{ credit.name }}
