Style updates and other cleanup.

--- a/application/static/sass/main.css
+++ b/application/static/sass/main.css
@@ -868,6 +868,11 @@ div.content-section {
   max-width: 60%;
 }
 
+.border-box {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 /**
  * Buttons
  */
