--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -6,11 +6,11 @@
     <div id="index-welcome">
         <h1 class="text-center margin-bottom h2">Welcome to Queer Theatre Kalamazoo!</h1>
         <div class="full-width">
-            <div class="" style="max-width: 550px; margin-left: auto; margin-right: auto;">
-                <p style="max-width: 550px; margin-left: auto; margin-right: auto;">
+            <div class="mxw-70 border-box text-center ml-auto mr-auto">
+                <p class="ml-auto mr-auto mxw-70">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam.
                 </p>
-                <a class="button" href="" style="width: 550px;">Read More</a>
+                <a class="button border-box ml-auto mr-auto" href="">Read More</a>
             </div>
         </div>
     </div>
